# Sber-IoT-Device

./: README.md  TASK.md
sber_device/: CMakeLists.txt  sdkconfig
sber_device/main/: CMakeLists.txt  button.c  button.h  csv.c  csv.h  csv_worker.c  csv_worker.h  fsm.c  fsm.h  idf_component.yml  key.c  key.h  leds.c  leds.h  measuring.c  measuring.h  sber_device.c  wifi_connection.c  wifi_connection.h
web/: index.php  upload.php
web/uploads/: data.csv
